--- a/style.css
+++ b/style.css
@@ -157,8 +157,6 @@ body {
 
 .nav {
   width: 100%;
-  position: -webkit-sticky;
-  position: sticky;
   top: 0;
   display: flex;
   flex-direction: column;
@@ -224,7 +222,7 @@ body {
   max-height: 0px;
   border-top: 1px solid #434343;
   background-color: #282940;
-  transition: 0.4s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 .nav__burger-menu {
@@ -234,14 +232,15 @@ body {
   flex-direction: column;
 }
 
-.nav__burger-menu a {
+.nav__burger-menu p {
   color: #D4D4D4;
   margin-bottom: 20px;
   transition: 0.2s ease;
 }
 
-.nav__burger-menu a:hover {
-  margin-left: 5px
+.nav__burger-menu p:hover {
+  margin-left: 5px;
+  color: #E17535;
 }
 
 .nav__menu-active {
@@ -305,11 +304,16 @@ body {
   background-attachment: fixed
 }
 
-.services__section {
+.services__item {
   display: flex;
   margin-bottom: 0px;
   flex-direction: column;
   align-items: center
+}
+
+.services__container {
+  display: flex;
+  flex-direction: column;
 }
 
 .services__icon {
@@ -338,6 +342,11 @@ body {
 .skills__gPHP {
   width: 190px;
   height: 190px
+}
+
+.skills__container {
+  display: flex;
+  flex-direction: column;
 }
 
 .contact {
@@ -437,42 +446,92 @@ body {
 
 /*Средние девайсы («таблетки», >= 768px) */
 @media (min-width: 768px) {
-  .title__block{
+  .title__block {
     padding: 0 50px
   }
+
   .title {
     height: 100vh;
     justify-content: left;
     background-position: left center
   }
-  .text__name{
-   font-size: 70px
- }
-  .btn__aboutMe{
-  font-size: 27px;
-}
-  .text__whoAmI{
-  font-size: 27px
-}
-  .nav__btn{
-   display: none
- }
-  .nav__menu{
+
+  .text__name {
+    font-size: 70px
+  }
+
+  .btn__aboutMe {
+    font-size: 27px;
+  }
+
+  .text__whoAmI {
+    font-size: 27px
+  }
+
+  .nav__btn {
+    display: none
+  }
+
+  .nav__menu {
     max-height: 500px
   }
-  .nav__burger-menu{
+
+  .nav__burger-menu {
     flex-direction: inherit;
- }
-  .nav__burger-menu a {
+  }
+
+  .nav__burger-menu p {
     margin: 0 20px
   }
-  .about__text,.services__text,.contact__text{
+
+  .about__text,
+  .services__text,
+  .contact__text {
     font-size: 20px
   }
+
+  .skills__container {
+    flex-direction: initial;
+    flex-wrap: wrap
+  }
+
+  .skills__item {
+    display: flex;
+    flex: 1 0 50%;
+    justify-content: center;
+  }
+
+  .services__container {
+    flex-direction: initial;
+    flex-wrap: wrap;
+  }
+
+  .services__item {
+    flex: 1 0 50%;
+    padding: 12px
+  }
+
 }
 
 /* Большие девайсы (десктопы, >= 992px) */
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+  .nav__inner {
+    padding: 20px;
+  }
+
+  .nav__menu {
+    border: none
+  }
+
+  .nav {
+    flex-direction: initial;
+  }
+  .container{
+    margin: 0 auto;
+    width: 700px
+  }
+
+}
 
 /* Экстрабольшие девайсы (большие десктопы, >= 1200px) */
 @media (min-width: 1200px) {}
