--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ html{
     line-height: 140%;
   }
   .services__text{
-    text-align: center
+    text-align: center;
   }
 
   .skills__container {
