--- a/style.css
+++ b/style.css
@@ -496,7 +496,6 @@ html{
 
 
 
-
 /*Малые девайсы («ландшафтные телефоны», >= 576px) */
 @media (min-width: 576px) {}
 
@@ -570,6 +569,14 @@ html{
     flex: 1 0 50%;
     padding: 12px
   }
+  .contact__main{
+    display: flex;
+    justify-content: center
+  }
+  .contact__main a{
+    margin: 17px
+  }
+  
 
 }
 
